<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_title"
        style="@style/Widget.DangerZoneMap_DI.TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_16_dp"
        android:text="@string/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="@dimen/default_16_dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/settings_title" />

    <TextView
        android:id="@+id/tv_select_zones"
        style="@style/Widget.DangerZoneMap_DI.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_16_dp"
        android:text="@string/tv_select_zones_to_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <CheckBox
        android:id="@+id/cb_natural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_16_dp"
        android:checked="true"
        android:text="@string/natural"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_zones" />

    <CheckBox
        android:id="@+id/cb_technogenic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_16_dp"
        android:text="@string/technogenic"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_natural"/>

    <CheckBox
        android:id="@+id/cb_anthropogenic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/anthropogenic"
        app:layout_constraintStart_toStartOf="@id/cb_technogenic"
        app:layout_constraintTop_toBottomOf="@id/cb_technogenic" />

    <CheckBox
        android:id="@+id/cb_ecological"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ecological"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@id/cb_anthropogenic"
        app:layout_constraintTop_toBottomOf="@id/cb_anthropogenic" />

    <Button
        android:id="@+id/btn_logout"
        app:icon="@drawable/ic_baseline_logout_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/exit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>