<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.startscreen.StartScreenFragment">

    <TextView
        android:id="@+id/base_auth_title"
        style="@style/Widget.DangerZoneMap_DI.TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_16_dp"
        android:text="@string/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/under_login_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="@dimen/default_16_dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/base_auth_title" />

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_16_dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="@dimen/default_8_dp"
        android:layout_weight="0.5"
        android:text="@string/registration"
        app:icon="@drawable/ic_baseline_person_add_24"
        app:layout_constraintBottom_toTopOf="@id/btn_google_auth"
        app:layout_constraintEnd_toStartOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="@dimen/default_16_dp"
        android:layout_weight="0.5"
        android:text="@string/auth"
        app:icon="@drawable/ic_baseline_login_24"
        app:layout_constraintBottom_toBottomOf="@+id/btn_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_registration"
        app:layout_constraintTop_toTopOf="@+id/btn_registration" />

    <Button
        android:id="@+id/btn_google_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:text="@string/google_auth"
        app:icon="@drawable/ic_google__g__logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

