<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.fragment.AddZoneMapsFragment" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/newZoneFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_zone_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_16_dp">

            <ImageView
                android:id="@+id/baseline_remove"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_remove_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_zone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_zone_title"
                android:textSize="26sp"
                app:layout_constraintTop_toBottomOf="@id/baseline_remove"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="@dimen/default_16_dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/add_zone_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_new_zone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_16_dp"
                app:layout_constraintTop_toBottomOf="@id/view">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_zone_name_hint"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_radius_slider_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_16_dp"
                android:text="@string/radius_tv"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/add_zone_layout"
                app:layout_constraintTop_toBottomOf="@id/ti_new_zone_title" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:value="0.0"
                android:valueFrom="0.0"
                android:valueTo="10.0"
                app:layout_constraintBottom_toBottomOf="@+id/tv_radius_slider_title"
                app:layout_constraintEnd_toStartOf="@id/slider_value"
                app:layout_constraintStart_toEndOf="@id/tv_radius_slider_title"
                app:layout_constraintTop_toTopOf="@+id/tv_radius_slider_title" />

            <TextView
                android:id="@+id/slider_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0000"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_radius_slider_title"
                app:layout_constraintEnd_toEndOf="@id/add_zone_layout"
                app:layout_constraintTop_toTopOf="@+id/tv_radius_slider_title"
                tools:ignore="MissingConstraints" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type_selector"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_16_dp"
                android:hint="@string/choose_zone_type"
                app:layout_constraintTop_toBottomOf="@id/slider">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/extra_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_16_dp"
                app:layout_constraintTop_toBottomOf="@id/type_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_new_zone_extra_desc_hint"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_add_zone_submit"
                app:icon="@drawable/ic_baseline_crisis_alert_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_16_dp"
                android:text="@string/add_zone_submit_button"
                app:layout_constraintEnd_toEndOf="@id/add_zone_layout"
                app:layout_constraintStart_toStartOf="@id/add_zone_layout"
                app:layout_constraintTop_toBottomOf="@id/extra_data" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

